# rust-pkcs11

./: .gitignore  Cargo.toml  LICENSE  README.md  REQUESTS.CSV  build.rs
client/: .gitignore  CMakeLists.txt  README.md
client/include/: client.h  log.h  main.h  message.h  socket.h  term.h
client/proto/: message.proto
client/src/: client.cpp  log.cpp  main.cpp  message.cpp  socket.cpp  term.cpp
proto/: message.proto
src/: lib.rs  main.rs  manager.rs  message.rs
src/client/: client.rs  mod.rs  socket.rs
src/message/: message.rs  mod.rs
src/server/: handler.rs  log.rs  manager.rs  message.rs  mod.rs  server.rs  socket.rs
src/server/handler/: handler.rs  list.rs  login.rs  mod.rs
src/socket/: mod.rs  socket.rs
src/utils/: io.rs  log.rs
