[package]
name = "rust-pkcs11"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Duclos-Cavalcanti daniel.duclos.cavalcanti@gmail.com"]
description = "This is a toy pkcs11 project"
repository = "https://github.com/duclos-cavalcanti/rust-pkcs11"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
cryptoki = "0.8.0"
colorized = "1.0.0"
