[package]
name = "rust-pkcs11"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Duclos-Cavalcanti daniel.duclos.cavalcanti@gmail.com"]
description = "This is a toy pkcs11 project"
repository = "https://github.com/duclos-cavalcanti/rust-pkcs11"
license = "MIT OR Apache-2.0"

[dependencies]
colored = "2.2.0"
cryptoki = "0.8.0"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.13.4"
